Added personal links

--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Katalin Simon</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/Meggyis" target="_blank">Katalin Simon</a>
+          and is
+          <a
+            href="https://github.com/Meggyis/Sandbox-Ops-Challenge"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://app.netlify.com/sites/deft-lolly-36a564/deploys/673f402a5fb4de0008793f68"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
